tests/ui/pattern_binding_count.stderr
Error [E0306]: pattern `Circle` expects 1 binding, got 2
  --> tests/ui/pattern_binding_count.jet:7:8
    |
  7 |     if s == Circle(a, b) {
    |        ^^^^^^^^^^^^^^^^^
 Why: each payload field needs its own binding name
 Fix: write `Circle(v0)
