tests/ui/pattern_binding_count.lex
enum Shape {
    Circle(Float);
}

fn main() {
    val s = Shape.Circle(1.0);
    if s == Circle(a, b) {
        print("x");
    }
}
